Bug 1600018 - Skip processing FinalizationGroups where the CCWs from the target to the FinalizationGroup object have been nuked r=sfink

Where a FinalizationGroup and its target are in different compartments they are linked by a CCW from a map in the target's zone to the FinalizationGroup. This deals with what happens if we nuke the CCWs between these two compartments. I think the sensible thing to do in this case is to not call the FinalizationGroup's callback and effectively forget about the registrations. Nuking CCWs happens when compartments are known to be dead and therefore this is similar to the way don't call callbacks on shutdown.

Depends on D55114

Differential Revision: https://phabricator.services.mozilla.com/D55115

--HG--
extra : moz-landing-system : lando