js/src/gc/FinalizationGroup.cpp
@@ -61,6 +61,12 @@ void GCRuntime::sweepFinalizationGroups(Zone* zone) {
       // Queue holdings for targets that are dying.
       for (JSObject* obj : records) {
         obj = UncheckedUnwrapWithoutExpose(obj);
+        if (!obj->is<FinalizationRecordObject>()) {
+          MOZ_ASSERT(JS_IsDeadWrapper(obj));
+          // CCWs between the compartments have been nuked. The
+          // FinalizationGroup's callback doesn't run in this case.
+          continue;
+        }
         auto record = &obj->as<FinalizationRecordObject>();
         FinalizationGroupObject* group = record->group();
         if (group) {
@@ -75,6 +81,12 @@ void GCRuntime::sweepFinalizationGroups(Zone* zone) {
       // Remove records that have been unregistered.
       records.eraseIf([](JSObject* obj) {
         obj = UncheckedUnwrapWithoutExpose(obj);
+        if (!obj->is<FinalizationRecordObject>()) {
+          MOZ_ASSERT(JS_IsDeadWrapper(obj));
+          // CCWs between the compartments have been nuked. The
+          // FinalizationGroup's callback doesn't run in this case.
+          return true;
+        }
         auto record = &obj->as<FinalizationRecordObject>();
         return !record->group();
       });
